--- a/certificates.html
+++ b/certificates.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style_index.css" rel="stylesheet">
+    <link href="style_certificates.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-    <title>Home - Prescott's Page</title>
+    <title>Certificates - Prescott's Page</title>
 </head>
 
 <body>
@@ -38,37 +38,17 @@
         <div class="row">
             <div class="column col-70">
                 <div id="indexTopBar">
-                    <h1>Welcome!</h1>
+                    <h1>Certificates</h1>
                     <p>
-                        Hi! I'm Prescott, an aspiring computer programmer/engineer, and welcome to my page!
+                        Tokens of my hard work, and of my biggest achievements!
                     </p>
                 </div>
-                <p id="aboutMe">
-                    I've been using computers ever since I was 3 years old, and I've loved everything about them. I
-                    learned my first programming language, HTML, when i was 8 years old, and I thought that was one
-                    of the most fascinating things I had utilized at the time.<br><br>
-                    I built my first PC in early 2019, and I've kept building off of it ever since. I started
-                    programming again in early 2021 by learning Python. I am now done my second year of community
-                    college, with 20+ languages and tools under my belt, incuding HTML, JavaScript, SQL, C++, C#, Java, 
-                    Kotlin, Linux, Bootstrap, React, and Figma.
-                    I'm very interested and excited to learn more about the field, and I can't wait to use what I've
-                    learned to make my mark on the world!
+                <p id="aboutCertificates">
+
                 </p>
             </div>
             <div class="column col-30">
-                <img class="img-fluid" id="homePhoto" src="images/alexart.png" alt="Sketch of my OC">
-            </div>
-        </div>
-        <div id="recentUpdates">
-            <div class="row">
-                <div class="column col-40">
-                    <h2 id="recentHeader">What have I been up to recently?</h2>
-
-
-                </div>
-                <div class="column col-60">
-                    
-                </div>
+                <img class="img-fluid" id="awardsPhoto" src="images/awards.jpg" alt="Code">
             </div>
         </div>
     </div>
