Portfolio page and 3 worksamples DONE!

--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,7 @@
             <div id="indexTopBar">
                 <h1>Resume</h1>
                 <p>
-                    My resume and cover letter. (Last updated: April 3, 2024)
+                    My resume. (Last updated: April 3, 2024)
                 </p>
             </div>
         </div>
