Resume, Ceritifcates, and Index pages done!

--- a/certificates.html
+++ b/certificates.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
     <header>
         <div class="container">
             <nav class="header-nav">
@@ -44,11 +43,60 @@
                     </p>
                 </div>
                 <p id="aboutCertificates">
-
+                    Here you will find many certificates that signify my learning, growth as a person, growth as an IT professional, and more!
                 </p>
             </div>
             <div class="column col-30">
                 <img class="img-fluid" id="awardsPhoto" src="images/awards.jpg" alt="Code">
+            </div>
+        </div>
+
+        <div id="certificate1" class="certificateDiv">
+            <div class="row">
+                <div class="col-50">
+                    <img class="img-fluid" id="introvert_certificate" src="certificates/introvert_certificate.png" alt="Managing your Career as an Introvert - PMI" />
+                </div>
+                <div class="col-50 align-right">
+                    <h1 class="certificateHeader right-header">Managing Your Career as an Introvert - PMI</h1>
+                    <p class="right-desc">
+                        As an introvert with autism, I have a lot of trouble networking and finding ways to move in the workforce. This course helped 
+                        me gain some new strategies, such as hoarding my downtime, and listening to myself to know when my body is telling me to take 
+                        a break from social interactions.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div id="certificate2" class="certificateDiv">
+            <div class="row">
+                <div class="col-50">
+                    <h1 class="certificateHeader left-header">Creating Your Personal Brand - LinkedIn</h1>
+                    <p class="left-desc">
+                        The first ever LinkedIn course I took, and still one of my favorites.<br/>
+                        As a content creator, I have experience building a brand for my online community, but I didn't have that much 
+                        experience regarding building my professional brand. This course gave me lots of new insights, such as showing activity frequently, 
+                        asking for proper feedback, and building your brand advocates. 
+                    </p>
+                </div>
+                <div class="col-50 align-right">
+                    <img class="img-fluid" id="personal_brand" src="certificates/personal_brand.png" alt="Creating Your Personal Brand - LinkedIn" />
+                </div>
+            </div>
+        </div>
+
+        <div id="certificate3" class="certificateDiv">
+            <div class="row">
+                <div class="col-50">
+                    <img class="img-fluid" id="introvert_certificate" src="certificates/github_certificate_1.png" alt="Learning GitHub - LinkedIn" />
+                </div>
+                <div class="col-50 align-right">
+                    <h1 class="certificateHeader right-header">Learning GitHub - LinkedIn</h1>
+                    <p class="right-desc">
+                        At the time, I knew I had a long way to go to being well-rounded in GitHub, so I took on this course and a few others, and came out with 
+                        a lot more than I thought I would. Forks, issues, merges, templates, READMEs... I took so much out of this course, including how to use 
+                        GitHub Pages– which is how you're reading this right now!
+                    </p>
+                </div>
             </div>
         </div>
     </div>
