--- a/index.html
+++ b/index.html
@@ -61,13 +61,24 @@
         </div>
         <div id="recentUpdates">
             <div class="row">
-                <div class="column col-40">
-                    <h2 id="recentHeader">What have I been up to recently?</h2>
-
-
-                </div>
                 <div class="column col-60">
-                    
+                    <h2 id="recentHeader">What have I been up to recently?</h2>
+                    <p id="recentBody">
+                        Over the past few months, myself and 9 others have been developing an application to game-ify urban development called "PikUp". 
+                        Led by Laura MacNeil and Ian Christian, we have been working on a brand new app that consists of features including tool sharing, 
+                        co-shopping, and incentivizing picking up garbage.
+                        <br/><br/>
+                        The team has managed to build a mostly functional prototype of PikUp, with the tool share and garbage cleanup features almost
+                        completely finished.
+                        <br/><br/>
+                        With the semester coming to an end soon, development on this project may slow down, but development will still be continuing 
+                        into the summertime. The team has done an outstanding job so far, and we look forward to releasing this to the public!
+                        <br/><br/><br/>
+                        Stay tuned to be the first to be updated on this project!
+                    </p>
+                </div>
+                <div class="column col-40 align-right">
+                    <img class="img-fluid" id="recentPhoto" src="images/pikup_load_page.png" alt="PikUp App">
                 </div>
             </div>
         </div>
