--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href="style_resume.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <title>Resume - Prescott's Page</title>
@@ -45,7 +46,128 @@
         </div>
         <br /><br />
         <div id="resumeLayout">
-
+            <div id="resumeHeader">
+                <div class="header-row row">
+                    <h1 id="myName">Prescott Hogan</h1>
+                </div>
+                <div class="header-row row">
+                    <div class="col-60">
+                        <h2 class="normal-header">Aspiring computer developer/engineer</h2>
+                    </div>
+                    <div class="col-40">
+                        <h2 class="normal-header">Halifax, Nova Scotia</h2>
+                    </div>
+                </div>
+                <div class="header-row row">
+                    <div class="col-60">
+                        <h2 class="normal-header">phldb2@gmail.com</h2>
+                    </div>
+                    <div class="col-40">
+                        <h2 class="normal-header">(902) 789-4489</h2>
+                    </div>
+                </div>
+            </div>
+            <hr class="resumeHr">
+            <p id="lookingForP"><span id="lookingFor">Looking for:</span> A 5-week programming work term, mandatory for NSCC graduation.</p>
+            <div id="personalAchievements">
+                <p class="personalHeader">Personal achievements:</p>
+                <span class="boldResumeText">2023 Challenge Nova Scotia – 1st place</span>
+                <ul class="personalList">
+                    <li>
+                        For creating a 90 second explainer video demonstrating a creative solution to help end food insecurity in Nova Scotia, 
+                        chosen by Premier Tim Houston and NSCC President Don Bureaux
+                    </li>
+                </ul>
+            </div>
+            <div id="personalSkills">
+                <p class="personalHeader">Personal skills and attributes:</p>
+                <ul class="personalList">
+                    <li><span class="boldResumeText">Very strong in mathematics</span></li>
+                    <li><span class="boldResumeText">Fluent in English</span></li>
+                    <li><span class="boldResumeText">Very versatile and hard worker</span></li>
+                    <li><span class="boldResumeText">Exemplary customer service skills</span></li>
+                </ul>
+            </div>
+            <div id="technicalSkills">
+                <p class="personalHeader">Technical skills:</p>
+                <ul class="personalList">
+                    <li><span class="boldResumeText">3 years of programming experience</span></li>
+                    <li><span class="boldResumeText">Basic Knowledge:</span> Linux/UNIX, Systems Analytics/Design, Artificial Intelligence, CLoud Functions</li>
+                    <li><span class="boldResumeText">Knowledgeable:</span> Microsoft Office, Python, HTML, T-SQL, C, C#, C++, Java, Kotlin, JavaScript, Bootstrap, Data Structures, 
+                    ASP.NET, WinForms, WPF, Cisco Networking, Windows OS Admin, UI/UX</li>
+                </ul>
+            </div>
+            <hr class="resumeHr">
+            <div id="education">
+                <p class="experienceHeader">Education:</p>
+                <div class="educationSubDiv row">
+                    <div class="col-60">
+                        <span class="boldResumeText">IT Programming Diploma</span><br/>
+                        Started September 2022, completed April 2024<br/>
+                        GPA - 4.0
+                    </div>
+                    <div class="col-40 right-text">
+                        Nova Scotia Community College<br/>
+                        Halifax, NS
+                    </div>
+                </div>
+                <div class="educationSubDiv row">
+                    <div class="col-60">
+                            <span class="boldResumeText">Enrolled in Bachelor of Computer Science</span><br/>
+                            Starting September 2024, anticipated completion April 2028
+                    </div>
+                    <div class="col-40 right-text">
+                        Dalhousie University<br/>
+                        Halifax, NS
+                    </div>
+                </div>
+            </div>
+            <div id="work">
+                <p class="experienceHeader">Work Experience:</p>
+                <div class="workSubDiv row">
+                    <div class="col-60">
+                        <span class="boldResumeText">PikUp</span><br/>
+                        Group Capstone<br/>
+                        January 2024 – Present
+                    </div>
+                    <div class="col-40 right-text">
+                        Halifax, NS
+                    </div>
+                </div>
+                <div class="workSubDivBottom row">
+                    <div class="col-95">
+                        <span class="boldResumeText">About:</span> "PikUp" is an Android application to help people connect and build their community by creating 
+                        an incentive for sharing tools, picking up trash, and co-shopping.<br/>
+                        <span class="boldResumeText">Duties:</span> Designing and itnegrating user interfaces.<br/>
+                        <span class="boldResumeText">Skills developed:</span> Teamwork, communication, problem solving
+                    </div>
+                </div>
+                <div class="workSubDiv row">
+                    <div class="col-60">
+                        <span class="boldResumeText">Atlantic Superstore - Bedford West</span><br/>
+                        Front End staff<br/>
+                        November 2021 – Present
+                    </div>
+                    <div class="col-40 right-text">
+                        Loblaws Inc.<br/>
+                        Bedford, NS
+                    </div>
+                </div>
+                <div class="workSubDivBottom row">
+                    <div class="col-95">
+                        <span class="boldResumeText">Duties:</span> Responsible for safe cart retrieval, facing and restocking shelves, checking out customers, 
+                        processing returns/exchanges, taking phone calls, safely counting money, closing the store, and substitute supervision.<br/>
+                        <span class="boldResumeText">Skills developed:</span> Leadership, communication, customer service<br/>
+                        <span class="boldResumeText">Achievements:</span>
+                        <ul class="workAchievements">
+                            <li>100+ good reviews online from customers.</li>
+                            <li>Recognized multiple times for achieving weekly fastest average scanning time across all cashiers.</li>
+                            <li>Praised by supervisors for excellent customer service skills.</li>
+                            <li>Recipient of the 2022 and 2023 Loblaw scholarship, for making a positive difference in my community.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
