First portfolio site prototype COMPLETE

--- a/goals.html
+++ b/goals.html
@@ -7,11 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style_goals.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-    <title>Goals - Prescott's Page</title>
+    <title>Certificates - Prescott's Page</title>
 </head>
 
 <body>
-
     <header>
         <div class="container">
             <nav class="header-nav">
@@ -20,6 +19,7 @@
                 </ul>
                 <h1>Prescott's Page</h1>
                 <ul class="nav-menu">
+                    <li><a href="https://github.com/leslieldb" target="_blank"><img class="img-fluid" id="GitHub" src="images/github.png" alr="GitHub" height="46px" width="46px"></a></li>
                     <li><a href="https://www.linkedin.com/in/prescott-hogan-44a132258/" target="_blank"><img class="img-fluid" id="LinkedIn" src="images/linkedin.png" alr="LinkedIn" height="46px" width="46px"></a></li>
                 </ul>
             </nav>
@@ -39,20 +39,76 @@
             <div class="column col-70">
                 <div id="indexTopBar">
                     <h1>Goals</h1>
-                    <p>
-                        How far have I come, and how far will I go?
-                    </p>
                 </div>
                 <p id="aboutGoals">
-
+                    Where am I now, and how far can I go?
                 </p>
             </div>
             <div class="column col-30">
                 <img class="img-fluid" id="goalsPhoto" src="images/bullseye.jpg" alt="Code">
             </div>
         </div>
-        <div id="goalsLayout">
-            
+
+        <div id="goalDiv1" class="goalDiv">
+            <div class="row">
+                <div class="col-65">
+                    <h1 class="left-header">Where am I now?</h1>
+                    <p class="left-desc">
+                        Right now, I have just completed my IT Programming program at Nova Scotia Community College, and I am now enrolled in 
+                        a Bachelor of Computer Science at Dalhousie.
+                        <br/><br/>
+                        I have been looking for work terms, and just recently someone reached out to me regarding one. This will be my first 
+                        IT work term ever if I get it, and I'm very eager to start my way into the industry.
+                    </p>
+                </div>
+                <div class="col-35 align-right">
+                    <img class="img-fluid" id="university_img" src="images/university.jpg" alt="University Image" />
+                </div>
+            </div>
+        </div>
+
+        <div id="goalDiv2" class="goalDiv">
+            <div class="row">
+                <div class="col-40">
+                    <img class="img-fluid" id="development_img" src="images/development.jpg" alt="Python Code" />
+                </div>
+                <div class="col-60 align-right">
+                    <h1 class="right-header">Where am I going?</h1>
+                    <p class="right-desc">
+                        My end educational goal is a Bachelor's Degree of Computer Science at Dalhousie, which I am well on my way towards. This has 
+                        been a dream of mine for almost a decade now, and I'm very excited to finally get this under way. I have no doubts that I'll 
+                        do very well.
+                        <br/><br/>
+                        As for my end career goals, I'm not certain about them yet. What I do know is that after I graduate from Dalhousie, I want to 
+                        make my way up the software engineering and software development positions, with my current main goal being the 
+                        senior developer position. I want to be able to gain many advancements throughout my programming career and build my 
+                        professionalism even more.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div id="goalDiv3" class="goalDiv">
+            <div class="row">
+                <div class="col-65">
+                    <h1 class="left-header">How do I get there?</h1>
+                    <p class="left-desc">
+                        If I want to achieve my career goals, the biggest thing I need to do is start networking. I have many friends in the industry 
+                        who have told me that this is by far the most important thing when it comes to a career, especially in IT.
+                        <br/><br/>
+                        The first thing I will do regarding this is build up my LinkedIn. I already have a few connections, but I learned that being active 
+                        on the site, posting once a day, will turn the algorithm more in your favor.
+                        <br/>
+                        This can bode very well, as employers browse LinkedIn all the time to recruit people via the hidden job market.
+                        <br/><br/>
+                        I am an introvert with autism, so networking events aren't really my thing, but I may decide to go to a few of those as well. For now, 
+                        however, this is definitely my best bet to start reaching my goals.
+                    </p>
+                </div>
+                <div class="col-35 align-right">
+                    <img class="img-fluid" id="summit_image" src="images/summit.jpg" alt="Mountain Summit" />
+                </div>
+            </div>
         </div>
     </div>
 
@@ -81,11 +137,12 @@
                 <div class="col-25">
                     <h4>Social Media</h4>
                     <nav class="footer-social-nav">
+                        <h4><a href="https://github.com/leslieldb" target="_blank">GitHub</a></h4>
                         <h4><a href="https://www.linkedin.com/in/prescott-hogan-44a132258/" target="_blank">LinkedIn</a></h4>
                     </nav>
                 </div>        
             </div>
-            <h4 id="copyright">Copyright &#169; 2023</h4>
+            <h4 id="copyright">Copyright &#169; 2023. All stock images from Unsplash.</h4>
         </div>
     </footer>
 
