--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 </ul>
                 <h1>Prescott's Page</h1>
                 <ul class="nav-menu">
+                    <li><a href="https://github.com/leslieldb" target="_blank"><img class="img-fluid" id="GitHub" src="images/github.png" alr="GitHub" height="46px" width="46px"></a></li>
                     <li><a href="https://www.linkedin.com/in/prescott-hogan-44a132258/" target="_blank"><img class="img-fluid" id="LinkedIn" src="images/linkedin.png" alr="LinkedIn" height="46px" width="46px"></a></li>
                 </ul>
             </nav>
@@ -109,11 +110,12 @@
                 <div class="col-25">
                     <h4>Social Media</h4>
                     <nav class="footer-social-nav">
+                        <h4><a href="https://github.com/leslieldb" target="_blank">GitHub</a></h4>
                         <h4><a href="https://www.linkedin.com/in/prescott-hogan-44a132258/" target="_blank">LinkedIn</a></h4>
                     </nav>
                 </div>        
             </div>
-            <h4 id="copyright">Copyright &#169; 2023</h4>
+            <h4 id="copyright">Copyright &#169; 2023. All stock images from Unsplash.</h4>
         </div>
     </footer>
 
