--- a/portfolio.html
+++ b/portfolio.html
@@ -264,6 +264,7 @@
                 </ul>
                 <h1>Prescott's Page</h1>
                 <ul class="nav-menu">
+                    <li><a href="https://github.com/leslieldb" target="_blank"><img class="img-fluid" id="GitHub" src="images/github.png" alr="GitHub" height="46px" width="46px"></a></li>
                     <li><a href="https://www.linkedin.com/in/prescott-hogan-44a132258/" target="_blank"><img class="img-fluid" id="LinkedIn" src="images/linkedin.png" alt="LinkedIn" height="46px" width="46px"></a></li>
                 </ul>
             </nav>
@@ -283,9 +284,6 @@
             <div class="column col-70">
                 <div id="indexTopBar">
                     <h1>Portfolio</h1>
-                    <p>
-                        Welcome to my portfolio!
-                    </p>
                 </div>
                 <p id="aboutPortfolio">
                     This contains worksamples of my proudest projects from over the years, including things for school, work
@@ -409,11 +407,12 @@
                 <div class="col-25">
                     <h4>Social Media</h4>
                     <nav class="footer-social-nav">
+                        <h4><a href="https://github.com/leslieldb" target="_blank">GitHub</a></h4>
                         <h4><a href="https://www.linkedin.com/in/prescott-hogan-44a132258/" target="_blank">LinkedIn</a></h4>
                     </nav>
                 </div>        
             </div>
-            <h4 id="copyright">Copyright &#169; 2023</h4>
+            <h4 id="copyright">Copyright &#169; 2023. All stock images from Unsplash.</h4>
         </div>
     </footer>
 
