--- a/resume.html
+++ b/resume.html
@@ -21,6 +21,7 @@
                 </ul>
                 <h1>Prescott's Page</h1>
                 <ul class="nav-menu">
+                    <li><a href="https://github.com/leslieldb" target="_blank"><img class="img-fluid" id="GitHub" src="images/github.png" alr="GitHub" height="46px" width="46px"></a></li>
                     <li><a href="https://www.linkedin.com/in/prescott-hogan-44a132258/" target="_blank"><img class="img-fluid" id="LinkedIn" src="images/linkedin.png" alr="LinkedIn" height="46px" width="46px"></a></li>
                 </ul>
             </nav>
@@ -40,7 +41,7 @@
             <div id="indexTopBar">
                 <h1>Resume</h1>
                 <p>
-                    My resume. (Last updated: April 3, 2024)
+                    Last updated: April 3, 2024
                 </p>
             </div>
         </div>
@@ -138,7 +139,7 @@
                     <div class="col-95">
                         <span class="boldResumeText">About:</span> "PikUp" is an Android application to help people connect and build their community by creating 
                         an incentive for sharing tools, picking up trash, and co-shopping.<br/>
-                        <span class="boldResumeText">Duties:</span> Designing and itnegrating user interfaces.<br/>
+                        <span class="boldResumeText">Duties:</span> Designing and integrating user interfaces.<br/>
                         <span class="boldResumeText">Skills developed:</span> Teamwork, communication, problem solving
                     </div>
                 </div>
@@ -196,11 +197,12 @@
                 <div class="col-25">
                     <h4>Social Media</h4>
                     <nav class="footer-social-nav">
+                        <h4><a href="https://github.com/leslieldb" target="_blank">GitHub</a></h4>
                         <h4><a href="https://www.linkedin.com/in/prescott-hogan-44a132258/" target="_blank">LinkedIn</a></h4>
                     </nav>
                 </div>        
             </div>
-            <h4 id="copyright">Copyright &#169; 2023</h4>
+            <h4 id="copyright">Copyright &#169; 2023. All stock images from Unsplash.</h4>
         </div>
     </footer>
 
